...

                            <ImageButton
                                android:id="@+id/btn_camera"
                                android:layout_width="180dp"
                                android:layout_height="180dp"
...

                        <EditText
                            android:id="@+id/txt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/txt_race"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <Button
                            android:id="@+id/btn_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/txt_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/txt_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/label_gender_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <SeekBar
                                android:id="@+id/seek_gender"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/label_gender_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/switch_obese"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/switch_overweight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/switch_hospitalized"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/switch_neutered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TableRow
                        android:id="@+id/row_gestation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                        <Switch
                            android:id="@+id/switch_gestation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TableRow
                        android:id="@+id/row_lactation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                        <Switch
                            android:id="@+id/switch_lactation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/btn_save"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
...

                    <Button
                        android:id="@+id/btn_delete"
                        style="@style/deleteButton"
                        android:layout_width="wrap_content"
...
